@@ -3,7 +3,7 @@
 #
 # Example configuration file for krb525d
 #
-# $Id: krb525.conf,v 1.3 1997/10/02 15:50:00 vwelch Exp $
+# $Id: krb525.conf,v 1.4 1999/10/06 19:17:49 vwelch Exp $
 #
 # A pound sign (#) designates a comment. All further text until the
 # end of the line is ignored.
@@ -11,15 +11,21 @@
 # All strings and symbols must be delimited by whitespace.
 #
 
+# Version number of krb525d this file is for
+version = 0.1.0 ;
+
+# List of clients allowed to use this service
 allowed_clients =
-	test
-	vwelch@TEST.NCSA.EDU
+# 	foo@BAR.EDU
 	;
-	
+
+# Changes in client the clients are allowed to make
 client_mappings = {
-	test = vwelch ;
-	vwelch@TEST.NCSA.EDU = vwelch ;
+#	foo@BAR.EDU = bar@BAR.EDU ;
 }
 
-allowed_hosts = computer.ncsa.uiuc.edu ;
+# Hosts that connections are allowed from
+allowed_hosts = 
+#	*.bar.edu
+;
 
